--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "babel-loader": "^6.2.10",
     "babel-preset-react": "^6.22.0",
     "html-webpack-plugin": "^2.26.0",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
-  }
+    "react-router": "^3.0.2",
+    "webpack": "^4.31.0",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "repository": "git@github.com:lazyelegance/stumped.git"
 }
